// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post<Tabs> renders correctly when displaying the body 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "flexDirection": "row",
      "width": "100%",
    }
  }
>
  <Tab
    first={true}
    name="elementor"
    number={null}
    onPress={[MockFunction]}
    selected={true}
  />
  <Tab
    name="comments"
    number={0}
    onPress={[MockFunction]}
    selected={false}
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  />
</View>
`;

exports[`Post<Tabs> renders correctly when displaying the comments 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "flexDirection": "row",
      "width": "100%",
    }
  }
>
  <Tab
    first={true}
    name="elementor"
    number={null}
    onPress={[MockFunction]}
    selected={false}
  />
  <Tab
    name="comments"
    number={0}
    onPress={[MockFunction]}
    selected={true}
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  />
</View>
`;

exports[`Post<Tabs> renders correctly when there are comments 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "flexDirection": "row",
      "width": "100%",
    }
  }
>
  <Tab
    first={true}
    name="elementor"
    number={null}
    onPress={[MockFunction]}
    selected={false}
  />
  <Tab
    name="comments"
    number={25}
    onPress={[MockFunction]}
    selected={true}
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  />
</View>
`;
